--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ venv/
 __pycache__/
 
 instance/
+*.ipynb
 
 .pytest_cache/
 .coverage
@@ -12,3 +13,5 @@ htmlcov/
 dist/
 build/
 *.egg-info/
+
+*.xlsx
