--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 instance/
 *.ipynb
 
+
 .pytest_cache/
 .coverage
 htmlcov/
@@ -13,5 +14,7 @@ htmlcov/
 dist/
 build/
 *.egg-info/
+MANIFEST
+*.toml
 
 *.xlsx
